# gv

./: CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/gv-cli/: Cargo.toml
crates/gv-cli/src/: main.rs
crates/gv-core/: Cargo.toml
crates/gv-core/src/: install.rs  lib.rs  lock.rs  manifest.rs  paths.rs  platform.rs  project.rs  proxy.rs  registry.rs  release.rs  resolve.rs  store.rs  tool.rs  workspace.rs
crates/gv-shim/: Cargo.toml
crates/gv-shim/src/: main.rs
docs/: DESIGN.md
packaging/homebrew/: gv.rb.template
