[package]
name = "gv-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gv: Go version & toolchain manager."

[[bin]]
name = "gv"
path = "src/main.rs"

[dependencies]
gv-core = { path = "../gv-core" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
indicatif.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
