[package]
name = "gv-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gv: Go version & toolchain manager."

[[bin]]
name = "gv"
path = "src/main.rs"

[dependencies]
gv-core = { path = "../gv-core" }
anyv-core = { git = "https://github.com/O6lvl4/anyv-core", tag = "v0.1.0" }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
reqwest.workspace = true
indicatif.workspace = true
futures.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
tar.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
