[package]
name = "gv-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for gv: resolve, install, store, manifest, lock."

[dependencies]
anyv-core = { git = "https://github.com/O6lvl4/anyv-core", tag = "v0.1.0" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
directories.workspace = true
semver.workspace = true
futures.workspace = true
once_cell.workspace = true
tracing.workspace = true
